Fix landing page alignment

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -6,7 +6,7 @@
 }
 
 #hero {
-    height: 92.5vh;
+    height: 85vh;
     width: 100%;
     /*background-image: url({{ site.baseurl }}/assets/img/title_background.png);*/
     background-position: center;
@@ -130,7 +130,7 @@ rect, circle {
 
 #welcome-container {
     width: 40vw;
-    height: 92.5vh;
+    height: 85vh;
     background: url({{ site.baseurl }}/assets/img/landing_welcome.png);
     background-size: cover;
     background-position: right;
@@ -143,7 +143,7 @@ rect, circle {
     display: flex;
     flex-direction: column;
     align-items: center;
-    /*justify-content: flex-start;*/
+    justify-content: space-around;
     animation: fade 0.5s linear 3.5s;
     animation-fill-mode: both;
     height: 80vh;
@@ -159,7 +159,6 @@ rect, circle {
     align-items: center;
     justify-content: center;
     text-align: center;
-    flex-basis: 90%;
     font-family: "LemonMilk";
 }
 
@@ -205,11 +204,11 @@ rect, circle {
         background-position: center top;
         animation: prevent-scroll 0.2s linear 3s;
         animation-fill-mode: both;
-        padding-top: 20vh;
+        padding-top: 30vh;
     }
 
     @keyframes prevent-scroll {
-        from { max-height: 90vh; overflow-y: hidden; }
+        from { max-height: 100vh; overflow-y: hidden; }
         to { max-height: none; }
     }
 
@@ -228,7 +227,7 @@ rect, circle {
     }
 
     #countdown {
-        justify-content: center;
+        justify-content: space-around;
     }
 
     svg {
@@ -256,19 +255,19 @@ rect, circle {
 
     #welcome-address__scroll-prompt {
         position: absolute;
-        top: 60vh;
+        top: 80vh;
         height: 18vh;
         padding-bottom: 2vh;
         width: 100vw;
         display: flex;
-        align-items: flex-end;
+        align-items: center;
         justify-content: center;
         text-align: center;
         font-size: 20pt;
-        background: linear-gradient(to top, var(--base4) 75%, rgba(0, 0, 0, 0));
+        background: linear-gradient(to top, var(--base4) 85%, rgba(0, 0, 0, 0));
         animation: fade 0.5s linear 3s;
         animation-fill-mode: both;
-        color: #eee;
+        color: #222;
         font-family: "LemonMilk";
    }
 
@@ -279,7 +278,7 @@ rect, circle {
         animation-fill-mode: both;
         width: 100vw;
         height: auto;
-        margin-top: 20vh;
+        margin-top: 30vh;
         padding-top: 5vh;
         background: var(--base4);
         font-family: "TwCentMT";
@@ -303,6 +302,7 @@ rect, circle {
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        text-align: center;
     }
     
     .welcome-address__greeting h2 {
